--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
+    "framer-motion": "^12.7.4",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
